--- a/Resources/views/_stylesheets.html.twig
+++ b/Resources/views/_stylesheets.html.twig
@@ -14,3 +14,11 @@
 <!--[if lte IE 9]>
 <link href="{{ asset('bundles/mikyadmin/assets/plugins/codrops-dialogFx/dialog.ie.css') }}" rel="stylesheet" type="text/css" media="screen" />
 <![endif]-->
+{% block form_js %}
+<link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-tag/bootstrap-tagsinput.css') }}" rel="stylesheet" type="text/css"/>
+<link href="{{ asset('bundles/mikyadmin/assets/plugins/dropzone/css/dropzone.css') }}" rel="stylesheet" type="text/css"/>
+<link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/css/datepicker3.css') }}" rel="stylesheet" type="text/css" media="screen">
+<link href="{{ asset('bundles/mikyadmin/assets/plugins/summernote/css/summernote.css') }}" rel="stylesheet" type="text/css" media="screen">
+<link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css') }}" rel="stylesheet" type="text/css" media="screen">
+<link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.css') }}" rel="stylesheet" type="text/css" media="screen">
+{% endblock form_js %}
