--- a/Resources/views/_javascripts.html.twig
+++ b/Resources/views/_javascripts.html.twig
@@ -12,21 +12,12 @@
 <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/select2/js/select2.full.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/classie/classie.js') }}"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/switchery/js/switchery.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/lib/d3.v3.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/nv.d3.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/src/utils.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/src/tooltip.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/src/interactiveLayer.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/src/models/axis.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/src/models/line.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/nvd3/src/models/lineWithFocusChart.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/mapplic/js/hammer.js') }}"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/mapplic/js/jquery.mousewheel.js') }}"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/mapplic/js/mapplic.js') }}"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-metrojs/MetroJs.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-sparkline/jquery.sparkline.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/skycons/skycons.js') }}" type="text/javascript"></script>
-<script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}" type="text/javascript"></script>
 
 <script src="{{ asset('bundles/mikyadmin/pages/js/pages.min.js') }}"></script>
 
@@ -34,6 +25,24 @@
 <script src="{{ asset('bundles/mikyadmin/assets/js/scripts.js') }}" type="text/javascript"></script>
 
 <script src="{{ asset('bundles/mikyadmin/assets/js/demo.js') }}" type="text/javascript"></script>
+
+{% block form_js %}
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/locales/bootstrap-datepicker.'~app.request.locale~'.min.js') }}" charset="UTF-8" type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-typehead/typeahead.bundle.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-typehead/typeahead.jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/handlebars/handlebars-v4.0.5.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-daterangepicker/daterangepicker.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.js') }}"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-autonumeric/autoNumeric.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/dropzone/dropzone.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-tag/bootstrap-tagsinput.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap3-wysihtml5/bootstrap3-wysihtml5.all.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/summernote/js/summernote.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-inputmask/jquery.inputmask.min.js') }}"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/js/form_elements.js') }}" type="text/javascript"></script>
+{% endblock %}
 <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/xt5z6ibr';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 {% block angular_js %}
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" type="text/javascript"></script>
