--- a/Resources/views/_stylesheets.html.twig
+++ b/Resources/views/_stylesheets.html.twig
@@ -21,4 +21,6 @@
 <link href="{{ asset('bundles/mikyadmin/assets/plugins/summernote/css/summernote.css') }}" rel="stylesheet" type="text/css" media="screen">
 <link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css') }}" rel="stylesheet" type="text/css" media="screen">
 <link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.css') }}" rel="stylesheet" type="text/css" media="screen">
+    <link href="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-select/css/bootstrap-select.min.css') }}" rel="stylesheet" type="text/css" media="screen">
+
 {% endblock form_js %}
