--- a/Resources/views/Crud/create.html.twig
+++ b/Resources/views/Crud/create.html.twig
@@ -2,7 +2,7 @@
 
 {% import 'MikyAdminBundle:Macro:headers.html.twig' as headers %}
 
-{% set header = configuration.vars.header|default(metadata.applicationName~'.ui.new_'~metadata.name) %}
+{% set header = configuration.vars.header|default(metadata.applicationName~'.'~metadata.name~'.new') %}
 
 {% block title %}{{ parent() }} {{ header|trans }}{% endblock %}
 
