--- a/Resources/views/_javascripts.html.twig
+++ b/Resources/views/_javascripts.html.twig
@@ -27,6 +27,7 @@
 <script src="{{ asset('bundles/mikyadmin/assets/js/demo.js') }}" type="text/javascript"></script>
 
 {% block form_js %}
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-select/js/bootstrap-select.min.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/locales/bootstrap-datepicker.'~app.request.locale~'.min.js') }}" charset="UTF-8" type="text/javascript"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-typehead/typeahead.bundle.min.js') }}" type="text/javascript"></script>
