--- a/Resources/views/_javascripts.html.twig
+++ b/Resources/views/_javascripts.html.twig
@@ -27,6 +27,7 @@
 <script src="{{ asset('bundles/mikyadmin/assets/js/demo.js') }}" type="text/javascript"></script>
 
 {% block form_js %}
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-collapse/bootstrap-tabcollapse.js') }}"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-select/js/bootstrap-select.min.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/locales/bootstrap-datepicker.'~app.request.locale~'.min.js') }}" charset="UTF-8" type="text/javascript"></script>
@@ -42,6 +43,29 @@
     <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap3-wysihtml5/bootstrap3-wysihtml5.all.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/summernote/js/summernote.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-inputmask/jquery.inputmask.min.js') }}"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-validation/js/jquery.validate.min.js') }}"
+            type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-validation/localization/messages_'~app.request.locale~'.min.js') }}"
+            type="text/javascript"></script>
+    <script>
+        $(function () {
+            $('form').validate({
+                ignore: false,
+                invalidHandler: function(e,validator) {
+                    // loop through the errors:
+                    for (var i=0;i<validator.errorList.length;i++){
+                        // "uncollapse" section containing invalid input/s:
+                        var tab = $(validator.errorList[i].element).closest('.tab-pane');
+                        if(tab != null){
+                            var id = tab.attr("id");
+                            $('a[href="#' + id + '"]').tab('show');
+                        }
+                        $(validator.errorList[i].element).closest('.panel-collapse.collapse').collapse('show');
+                    }
+                }
+            })
+        })
+    </script>
     <script src="{{ asset('bundles/mikyadmin/assets/js/form_elements.js') }}" type="text/javascript"></script>
 {% endblock %}
 <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/xt5z6ibr';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
