--- a/Resources/views/Form/theme.html.twig
+++ b/Resources/views/Form/theme.html.twig
@@ -32,7 +32,7 @@
     </div>
 {%- endblock miky_date_time_type_row %}
 {%- block miky_date_time_type_widget -%}
-{{ form_widget(form.date, { 'attr': {'class': 'col-md-6'} }) }}
+{{ form_widget(form.date, { 'attr': {'class': 'col-md-6 pull-left'} }) }}
 {{ form_widget(form.time, { 'attr': {'class': 'col-md-6'} }) }}
 {%- endblock miky_date_time_type_widget -%}
 {%- block date_widget -%}
