--- a/Resources/public/pages/css/pages.css
+++ b/Resources/public/pages/css/pages.css
@@ -6340,8 +6340,8 @@ form legend {
 }
 
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
-    background: #f8f8f8;
-    color: rgba(98, 98, 98, 0.23);
+    /*background: #f8f8f8;*/
+    /*color: rgba(98, 98, 98, 0.23);*/
 }
 
 .form-control.transparent {
