--- a/Resources/views/Form/theme.html.twig
+++ b/Resources/views/Form/theme.html.twig
@@ -1,14 +1,49 @@
 {% extends 'form_div_layout.html.twig' %}
 {% import _self as macro %}
+{%- block row_attributes -%}
+    {%- for attrname, attrvalue in row_attr -%}
+        {%- if attrname in ['placeholder', 'title'] -%}
+            {{- attrname }}="{{ translation_domain is same as(false) ? attrvalue : attrvalue|trans({}, translation_domain) }}"
+        {%- elseif attrvalue is same as(true) -%}
+            {{- attrname }}="{{ attrname }}"
+        {%- elseif attrvalue is not same as(false) -%}
+            {{- attrname }}="{{ attrvalue }}"
+        {%- endif -%}
+    {%- endfor -%}
+{%- endblock row_attributes -%}
 {% block form_row -%}
-    <div class="{% if attr is not empty and attr.row_class is not empty %}{{ attr.row_class }}{% endif %} form-group form-group-default{% if (not compound or force_error|default(false)) and not valid %} error {% endif %} {% if required -%} required{% endif %}">
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " form-group form-group-default"}) %}
+{% if (not compound or force_error|default(false)) and not valid %}
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " error"}) %}
+{% endif %}
+{% if required -%} {% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " required"}) %}{% endif %}
+    <div {{ block('row_attributes') }}>
         {{- form_label(form) -}}
         {{- form_widget(form) -}}
         {{- form_errors(form) -}}
     </div>
 {%- endblock form_row %}
+{% block choice_row -%}
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " form-group"}) %}
+{% if (not compound or force_error|default(false)) and not valid %}
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " error"}) %}
+{% endif %}
+{% if required -%} {% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " required"}) %}{% endif %}
+    <div {{ block('row_attributes') }}>
+        {{- form_label(form) -}}
+        {% set attr = attr|merge({'class': attr.class|default ~ ' ui dropdown'}) %}
+
+        {{- form_widget(form, {'attr': attr}) -}}
+        {{- form_errors(form) -}}
+    </div>
+{%- endblock choice_row %}
 {% block date_row -%}
-    <div class="{% if required %}{% endif %}form-group{% if (not compound or force_error|default(false)) and not valid %} error{% endif %}">
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " form-group"}) %}
+{% if (not compound or force_error|default(false)) and not valid %}
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " error"}) %}
+{% endif %}
+{% if required -%} {% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " required"}) %}{% endif %}
+    <div {{ block('row_attributes') }}>
         {{- form_label(form) -}}
         {% set attr = attr|merge({'class': attr.class|default ~ ' ui dropdown'}) %}
 
@@ -20,12 +55,18 @@
 {%- block miky_time_type_widget -%}
 {% set attr = attr|merge({'class': attr.class|default ~ ' input-group bootstrap-timepicker'}) %}
     <div {{ block('widget_attributes') }}>
-<input  type="text" {% if value is defined %} value="{{ value }}"{% endif %} name="{{ form.vars.full_name }}"class="form-control timepicker">
+<input readonly type="text" {% if value is defined %} value="{{ value }}"{% endif %} name="{{ form.vars.full_name }}"class="form-control timepicker">
 <span class="input-group-addon"><i class="pg-clock"></i></span>
 </div>
 {%- endblock miky_time_type_widget %}
+
 {% block miky_date_time_type_row -%}
-    <div class="{% if attr is not empty and attr.row_class is not empty %}{{ attr.row_class }}{% endif %} form-group{% if (not compound or force_error|default(false)) and not valid %} error {% endif %} {% if required -%} required{% endif %}">
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " form-group"}) %}
+{% if (not compound or force_error|default(false)) and not valid %}
+{% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " error"}) %}
+{% endif %}
+{% if required -%} {% set row_attr = row_attr|merge({'class': row_attr.class|default ~ " required"}) %}{% endif %}
+    <div {{ block('widget_attributes') }}>
         {{- form_label(form) -}}
         {{- form_widget(form) -}}
         {{- form_errors(form) -}}
@@ -56,7 +97,7 @@
     {%- endif -%}
 {%- endblock date_widget -%}
 {% block miky_date_type_row -%}
-    <div class="{% if attr is not empty and attr.row_class is not empty %}{{ attr.row_class }}{% endif %}{% if required %}{% endif %}form-group{% if (not compound or force_error|default(false)) and not valid %} error{% endif %}">
+    <div class="{% if attr is not empty and attr.row_class is not empty %}{{ attr.row_class }}{% endif %}{% if required %}{% endif %} form-group{% if (not compound or force_error|default(false)) and not valid %} error{% endif %}">
         {{- form_label(form) -}}
         {% set attr = attr|merge({'class': attr.class|default ~ ' ui dropdown'}) %}
 
@@ -67,7 +108,7 @@
 {%- block miky_date_type_widget -%}
 {% set attr = attr|merge({'class': attr.class|default ~ ' datepicker-component input-group date'}) %}
     <div  {{ block('widget_attributes') }}>
-<input type="text" {% if value is defined %} value="{{ value }}"{% endif %} data-locale="{{ app.request.locale }}" data-format="{{ format }}" name="{{ form.vars.full_name }}" class="form-control"><span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+<input readonly type="text" {% if value is defined %} value="{{ value }}"{% endif %} data-locale="{{ app.request.locale }}" data-format="{{ format }}" name="{{ form.vars.full_name }}" class="form-control"><span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 </div>
 {%- endblock miky_date_type_widget -%}
 
@@ -116,7 +157,7 @@
         {% set required = false %}
     {%- endif -%}
     {% set attr = attr|merge({'class': 'form-control ' ~ (attr.class is defined ? ' ' ~ attr.class : '') ~ (errors|length > 0 ? ' error' : '')} ) %}
-{% if with_search_field == false and multiple == false %}
+{% if simple_select == true and multiple == false %}
     {% set attr = attr|merge({'class': 'selectpicker ' ~ attr.class})%}
     <select {{ block('widget_attributes') }}>
     {% else %}
@@ -205,15 +246,7 @@
     </div>
 {%- endblock money_widget %}
 
-{% block choice_row -%}
-    <div class="{% if required %}{% endif %}form-group{% if (not compound or force_error|default(false)) and not valid %} error{% endif %}">
-        {{- form_label(form) -}}
-        {% set attr = attr|merge({'class': attr.class|default ~ ' ui dropdown'}) %}
 
-            {{- form_widget(form, {'attr': attr}) -}}
-        {{- form_errors(form) -}}
-    </div>
-{%- endblock choice_row %}
 
 {%- block choice_widget_expanded -%}
 
@@ -246,11 +279,11 @@
     {% import 'MikyResourceBundle:Macros:notification.html.twig' as notification %}
     {% import _self as forms %}
     {% set attr = attr|merge({'class': attr.class|default ~ ' controls collection-widget'}) %}
-
+    {% set formattedFullName = form.vars.full_name|replace({']': "_", '[': "_"}) %}
     {% spaceless %}
         <div data-form-type="collection" {{ block('widget_container_attributes') }}
                 {% if prototype is defined and allow_add %}
-                    data-prototype='{{forms.collection_item(prototype, allow_delete, button_delete_label, '__name__', form)|e }}'
+                    data-prototype='{{forms.collection_item(prototype, allow_delete, button_delete_label, '__name__', formattedFullName)|e }}'
                 {%- endif -%}
         >
             {{ notification.error(form.vars.errors) }}
@@ -269,7 +302,7 @@
             <div {% if reference_property is not null %}
             data-form-reference-property="{{ reference_property }}"
             {% endif %}
-             class="panel-group" id="{{ form.vars.full_name|replace({']': "_", '[': "_"}) }}" role="tablist" aria-multiselectable="true" data-form-collection="list">
+             class="panel-group" id="{{ formattedFullName }}" role="tablist" aria-multiselectable="true" data-form-collection="list">
                 {% for child in form %}
                     {{ forms.collection_item(child, allow_delete, button_delete_label, loop.index0, form) }}
                 {% endfor %}
@@ -280,14 +313,14 @@
     {% endspaceless %}
 {%- endblock collection_widget %}
 
-{% macro collection_item(form, allow_delete, button_delete_label, index, formParent) %}
+{% macro collection_item(form, allow_delete, button_delete_label, index, formattedFullName) %}
 
 
 {% spaceless %}
 <div class="panel panel-default" data-form-collection="item" data-form-collection-index="{{ index }}">
-<div class="panel-heading" role="tab" id="heading{{ index }}">
+<div class="panel-heading" role="tab" id="{{ formattedFullName }}heading{{ index }}">
 <h4 class="panel-title" >
-<a class="collapsed" data-toggle="collapse" data-form-collection="item-title" data-parent="#{{ formParent.vars.full_name|replace({']': "_", '[': "_"}) }}" href="#collapse{{ index }}" aria-expanded="false" aria-controls="collapse{{ index }}">
+<a class="collapsed" data-toggle="collapse" data-form-collection="item-title" data-parent="#{{ formattedFullName }}" href="#{{ formattedFullName }}collapse{{ index }}" aria-expanded="false" aria-controls="{{ formattedFullName }}collapse{{ index }}">
 {{ index }}
 </a>
 </h4>
@@ -298,7 +331,7 @@
                     </a>
 {% endif %}
 </div>
-<div id="collapse{{ index }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ index }}">
+<div id="{{ formattedFullName }}collapse{{ index }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="{{ formattedFullName }}heading{{ index }}">
 <div class="panel-body">
  {{ form_widget(form) }}
 </div>
