--- a/Resources/public/pages/css/pages.css
+++ b/Resources/public/pages/css/pages.css
@@ -17,7 +17,10 @@ body.fixed-header .header {
     left: 0;
     top: 0;
 }
-
+.form-group-default.form-group-money{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
 body.mobile .sidebar-menu {
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
