--- a/Resources/views/_javascripts.html.twig
+++ b/Resources/views/_javascripts.html.twig
@@ -1,5 +1,6 @@
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/pace/pace.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery/jquery-1.11.1.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('bundles/mikycore/plugins/jquery.initialize/jquery.initialize.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/modernizr.custom.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-ui/jquery-ui.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrapv3/js/bootstrap.min.js') }}" type="text/javascript"></script>
@@ -47,6 +48,9 @@
             type="text/javascript"></script>
     <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-validation/localization/messages_'~app.request.locale~'.min.js') }}"
             type="text/javascript"></script>
+    <script src="{{ asset("bundles/bosoneditor/tinymce/jquery.tinymce.min.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("bundles/bosoneditor/tinymce/tinymce.min.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("bundles/bosoneditor/js/custom_tinymce.js") }}" type="text/javascript"></script>
     <script>
         $(function () {
             $('form').validate({
