--- a/Resources/views/Crud/_grid.html.twig
+++ b/Resources/views/Crud/_grid.html.twig
@@ -37,6 +37,9 @@
                             <td class="v-align-middle">
 
                             </td>
+                            <td class="v-align-middle">
+
+                            </td>
                             {% for field in definition.fields|keys %}
 
                                 {% if field in definition.filters|keys %}
